# langua

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  init-test-db.sql
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c26e5f3894a7_initial_schema.py
backend/app/: main.py
backend/app/api/: conversation.py  sessions.py  topics.py
backend/app/core/: api_errors.py  auth.py  config.py  database.py  exception_handlers.py  logging.py  middleware.py
backend/app/models/: __init__.py  feedback.py  session.py  transcript.py  user.py
backend/app/repositories/: __init__.py  feedback.py  session.py  transcript.py  user.py
backend/app/schemas/: auth.py  conversation.py  feedback.py  session.py  topics.py
backend/app/services/: coach.py  conversation_service.py  dependencies.py  domain_errors.py  errors.py  factory.py  feedback_service.py  prompts.py  protocols.py  session_service.py  stt.py  tts.py  user_service.py
backend/app/worker/: settings.py  tasks.py
backend/tests/: test_auth.py  test_coach.py  test_conversation_end.py  test_conversation_start.py  test_conversation_turn.py  test_end_quiz_enqueue.py  test_factory.py  test_feedback_endpoints.py  test_feedback_job.py  test_health.py  test_middleware.py  test_models.py  test_protocols.py  test_session_endpoints.py  test_stt.py  test_topics.py  test_tts.py  test_turn_constraints.py  test_worker_settings.py
docs/plans/: 2026-03-21-langua-design.md  2026-03-21-langua-implementation-plan.md  (+2 more)
frontend/: README.md  package-lock.json  package.json
(+35 files in other folders)
